--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,18 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "scss": "node-sass --output-style compressed -o dist/css src/scss",
-    "watch:css": "onchange 'src/scss' -- npm run scss",
-    "serve": "browser-sync start --server --files 'dist/css/*.css, **/*.html'",
-    "start": "run-p serve watch:css"
+    "start": "npx parcel src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.27.7",
-    "node-sass": "^7.0.0",
-    "npm-run-all": "^4.1.5",
-    "onchange": "^7.1.0"
+    "@parcel/transformer-sass": "^2.0.1",
+    "autoprefixer": "^10.4.0",
+    "parcel": "^2.0.1",
+    "postcss": "^8.4.4"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "overrideBrowserslist": [
+          "> 1%",
+          "last 4 versions",
+          "ie >= 9"
+        ]
+      }
+    }
   }
 }
