--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "node-sass src/scss/main.scss ../dist/css/main.css -w",
-    "start": "parcel serve ./src/index.html --no-cache",
-    "dev": "npm-run-all --parallel watch start"
+    "start": "npx parcel src/index.html"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +12,6 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.1",
     "autoprefixer": "^10.4.0",
-    "node-sass": "^7.0.0",
-    "npm-run-all": "^4.1.5",
     "parcel": "^2.0.1",
     "postcss": "^8.4.4"
   },
