--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -4,26 +4,40 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx parcel src/index.html"
+    "css:scss": "node-sass --output-style compressed -o dist src/scss",
+    "css:autoprefixer": "postcss -u autoprefixer -r dist/*.css",
+    "css:lint": "stylelint src/scss/*.scss --syntax scss || true",
+    "watch:css": "onchange \"src/scss\" -- npm run build:css",
+    "watch:images": "onchange \"src/images\" -- npm run build:images",
+    "build:images": "mv -i src/images dist",
+    "build:css": "npm run css:lint && npm run css:scss && npm run css:autoprefixer",
+    "serve": "browser-sync start --server \"dist\" --files \"dist\"",
+    "build:html": "posthtml -c posthtml.json",
+    "watch:html": "onchange \"src/views\" -- npm run build:html",
+    "build:js": "webpack --mode=production",
+    "watch:js": "onchange \"src/js\" -- webpack --mode=development",
+    "watch": "run-p serve watch:*",
+    "build": "run-p build:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.1",
+    "@babel/preset-env": "^7.16.4",
     "autoprefixer": "^10.4.0",
-    "parcel": "^2.0.1",
-    "postcss": "^8.4.4"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {
-        "overrideBrowserslist": [
-          "> 1%",
-          "last 4 versions",
-          "ie >= 9"
-        ]
-      }
-    }
+    "babel-loader": "^8.2.3",
+    "browser-sync": "^2.27.7",
+    "htmlnano": "^1.1.1",
+    "imagemin-cli": "^7.0.0",
+    "node-sass": "^7.0.0",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "postcss-cli": "^9.1.0",
+    "posthtml": "^0.16.5",
+    "posthtml-cli": "^0.10.0",
+    "posthtml-modules": "^0.8.0",
+    "stylelint": "^14.1.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
