--- a/jsTask/package.json
+++ b/jsTask/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
     "eslint-plugin-jest": "^23.8.2",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "tar": ">=4.4.18"
   }
 }
