--- a/tickets/package.json
+++ b/tickets/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.5",
     "@mui/material": "^5.2.7",
+    "@mui/system": "^5.2.6",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
