--- a/tickets/package.json
+++ b/tickets/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.5",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@mui/system": "^5.2.6",
     "@reduxjs/toolkit": "^1.7.1",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.19",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
