--- a/tickets/package.json
+++ b/tickets/package.json
@@ -8,7 +8,10 @@
     "@hookform/resolvers": "^2.8.5",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
     "@mui/system": "^5.2.6",
+    "@mui/x-data-grid": "^5.2.2",
+    "@mui/x-data-grid-generator": "^5.2.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
