--- a/tickets/package.json
+++ b/tickets/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "firebase": "^9.6.1",
     "nanoid": "^3.1.30",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
