--- a/tickets/package.json
+++ b/tickets/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "deep-equal": "^2.0.5",
     "firebase": "^9.6.1",
     "nanoid": "^3.1.30",
     "query-string": "^7.1.0",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
     "@types/styled-components": "^5.1.19",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
