--- a/tickets/package.json
+++ b/tickets/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-hook-form": "^7.22.5",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
