--- a/tickets/tsconfig.json
+++ b/tickets/tsconfig.json
@@ -15,5 +15,5 @@
       "*": ["./src/*.d.ts"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", ".firebase", "build"]
 }
