--- a/tickets/package.json
+++ b/tickets/package.json
@@ -17,8 +17,8 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.1",
-    "moment": "^2.29.1",
     "nanoid": "^3.1.30",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
